layout endringer på forskjellige komponenter

--- a/src/AvtaleSide/GodkjenningSteg/Godkjenning.less
+++ b/src/AvtaleSide/GodkjenningSteg/Godkjenning.less
@@ -1,23 +1,27 @@
 .godkjenning {
-  .innholdsboks__innhold {
-    display: flex;
-    flex-direction: column;
-  }
+    .innholdsboks__innhold {
+        display: flex;
+        flex-direction: column;
+    }
 
-  &__tittel {
-    margin-bottom: 1.5rem;
-  }
+    .ekspanderbartPanel {
+        margin-top: 1rem;
+    }
 
-  .veilederpanel-med-ikon {
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-  }
+    &__tittel {
+        margin-bottom: 1.5rem;
+    }
 
-  .bekreftCheckboksPanel {
-    margin-bottom: 1rem;
-  }
+    .veilederpanel-med-ikon {
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
 
-  @media print {
-    display: none;
-  }
+    .bekreftCheckboksPanel {
+        margin: 2rem 0;
+    }
+
+    @media print {
+        display: none;
+    }
 }
