--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -1,7 +1,7 @@
 @import '../../node_modules/nav-frontend-core/less/_variabler';
 
 .innloggingslinje {
-    background-color: @navMorkGra;
+    background-color: white;
     color: white;
     padding: 0.5rem;
     display: flex;
@@ -9,12 +9,8 @@
     justify-content: space-between;
 
     &__identifikator {
-        color: white;
+        color: black;
         text-decoration: none;
-    }
-
-    &__loggutknapp {
-        background-color: @navLysGra;
     }
 
     @media print {
