--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -1,5 +1,11 @@
 @mobile-breakpoint: 576px;
 
+@media print {
+    #_hj_feedback_container {
+        display: none !important;
+    }
+}
+
 .avtaleparter {
     &__content {
         padding-top: 0.5rem;
@@ -21,6 +27,11 @@
         justify-content: left;
         flex-grow: 1;
         padding-left: 0.5rem;
+
+        @media print {
+            display: flex;
+            flex-direction: row;
+        }
 
         &--fortsettelse {
             display: flex;
