fikset css på nav bar, så den blir lik med current master branch

--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -26,8 +26,6 @@
     }
 
     &__tilbakeknapp {
-        background-color: @navLysGra;
-
         &--tilbake {
             display: flex;
             align-items: center;
@@ -46,10 +44,7 @@
 
     &__identitet {
         padding-right: 4rem;
-    }
-
-    &__loggutknapp {
-        background-color: @navLysGra;
+        color: black;
     }
 
     @media print {
@@ -57,16 +52,12 @@
     }
 
     .ekspanderbartPanel {
-        background-color: #3e3832;
         width: 100%;
 
         &__hode {
-            background-color: #3e3832;
-            color: white;
         }
 
         &__heading {
-            color: white;
         }
     }
 
