--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -9,6 +9,10 @@
         margin-top: 0.5rem;
         margin-bottom: 0.5rem;
     }
+
+    &__banner {
+        margin-bottom: 1rem;
+    }
 }
 
 @media (min-width: @screen-sm-min) {
