fikset par css feil som dukket opp i ie ved testing av appen

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
@@ -5,6 +5,12 @@
     }
 
     &__ikkeSatt {
+        /* blir kun rendret av IE. erstattning for fit-content som ikke støttes */
+        @media screen and (-ms-high-contrast: active),
+            (-ms-high-contrast: none) {
+            display: inline-block;
+        }
+
         background-color: #ffe5c2;
         width: fit-content;
         padding-left: 1rem;
