--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/Avtaleparter/Avtaleparter.less
@@ -58,6 +58,12 @@
         margin-bottom: 0.5rem;
 
         &--ikkeFyltUt {
+            /* blir kun rendret av IE. erstattning for fit-content som ikke støttes */
+            @media screen and (-ms-high-contrast: active),
+                (-ms-high-contrast: none) {
+                display: inline-block;
+            }
+
             background-color: #ffe5c2;
             width: fit-content;
             padding-left: 1rem;
