endret sub-banner i tilrettelegging steget

--- a/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
+++ b/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
@@ -8,12 +8,19 @@
     &__arbeidsgiver {
         background-color: @navBlaLighten80;
     }
+
     &__veileder {
         background-color: @navLillaLighten60;
     }
+
+    &__begge {
+        background-color: #c6c1be;
+    }
+
     &__fyllesUtAvTekst {
         padding-left: 1rem;
     }
+
     &__utfyllingsIkon {
         padding-left: 2rem;
     }
