--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -16,8 +16,8 @@
         }
     }
 
-    .knapp--standard {
-        border-radius: 4px;
+    &__chevron {
+        display: flex;
     }
 
     &__identifikator {
@@ -53,12 +53,6 @@
 
     .ekspanderbartPanel {
         width: 100%;
-
-        &__hode {
-        }
-
-        &__heading {
-        }
     }
 
     @media (min-width: 576px) {
