--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
@@ -1,5 +1,18 @@
+@keyframes expandFromRight {
+    from {
+        max-width: 0;
+        overflow: hidden;
+    }
+
+    to {
+        max-width: 100%;
+    }
+}
+
 .oppgaveOppsummering {
-    padding: 1rem 0 0 0;
+    padding-left: 6px;
+    border-left: 2px solid lightgrey;
+    margin: 1.5rem 0 2.5rem 0;
 
     &__tittel {
         margin-bottom: 1.5rem;
@@ -18,11 +31,10 @@
         word-break: break-word;
     }
 
-    &__ikkeFyltUt {
-        background-color: #ffe5c2;
-        width: 20%;
-        padding-left: 0.5rem;
-        padding-right: 1rem;
-        border-radius: 4px;
+    &__etikettInfo {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        animation: 2s ease-out 0s 1 expandFromRight;
     }
 }
