Visuelle justeringer på OpprettelseFullfort side

--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -11,7 +11,7 @@
 
   &__undertittel {
     margin-top: 2rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
 
   &__knapp {
@@ -33,8 +33,10 @@
     }
   }
 
-  &__inputfelt {
+  &__lenke {
     width: 100%;
+    margin-bottom: 1rem;
+    word-break: break-all;
   }
 
   &__lenkedeling {
@@ -84,18 +86,16 @@
       }
     }
 
-    &__inputfelt {
-      margin-bottom: 0;
+    &__lenke {
+      margin-bottom: 0.7rem;
         margin-right: 1rem;
+        font-size: 1.2rem;
     }
 
     &__lenkedeling {
       flex-direction: row;
       align-items: flex-end;
       justify-content: space-between;
-    }
-    &__tekst {
-      margin-right: 13rem;
     }
 
     .nav-veilederpanel {
