--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/målOppsummering/målOppsummering.less
@@ -12,10 +12,12 @@
         }
 
         background-color: #ffe5c2;
+        width: -moz-fit-content;
         width: fit-content;
         padding-left: 1rem;
         padding-right: 1rem;
-        border-radius: 4px;
+        border-radius: 3px;
         text-align: center;
+        border: 1px solid black;
     }
 }
