--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
@@ -20,9 +20,12 @@
 
     &__ikkeFyltUt {
         background-color: #ffe5c2;
-        width: 20%;
-        padding-left: 0.5rem;
+        width: -moz-fit-content;
+        width: fit-content;
+        padding-left: 1rem;
         padding-right: 1rem;
-        border-radius: 4px;
+        border-radius: 3px;
+        text-align: center;
+        border: 1px solid black;
     }
 }
