--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/varighet/varighet.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/varighet/varighet.less
@@ -17,13 +17,11 @@
         width: 100%;
     }
 
-    &__label {
-        padding-top: 1rem;
+    &__navn {
+        margin-bottom: 0.5rem;
     }
 
     &__navn {
-        margin-bottom: 1rem;
-
         &--ikkeFyltUt {
             /* blir kun rendret av IE. erstattning for fit-content som ikke støttes */
             @media screen and (-ms-high-contrast: active),
@@ -32,15 +30,21 @@
             }
 
             background-color: #ffe5c2;
+            width: -moz-fit-content;
             width: fit-content;
             padding-left: 1rem;
             padding-right: 1rem;
-            border-radius: 4px;
+            border-radius: 3px;
             text-align: center;
+            border: 1px solid black;
         }
     }
 
     @media (min-width: @mobile-breakpoint) {
+        &__navn {
+            margin-bottom: 0;
+        }
+
         &__rad {
             flex-direction: row;
             justify-content: space-between;
