Revert "ferdig med aa implementere nytt design på oppsummeringssiden"
This reverts commit 4e0994013359a9f9c776cd99140d708d1b0bf7df.

--- a/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
+++ b/src/AvtaleSide/GodkjenningSteg/Oppsummering/oppgaveOppsummering/oppgaveOppsummering.less
@@ -20,12 +20,9 @@
 
     &__ikkeFyltUt {
         background-color: #ffe5c2;
-        width: -moz-fit-content;
-        width: fit-content;
-        padding-left: 1rem;
+        width: 20%;
+        padding-left: 0.5rem;
         padding-right: 1rem;
-        border-radius: 3px;
-        text-align: center;
-        border: 1px solid black;
+        border-radius: 4px;
     }
 }
