--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -16,8 +16,8 @@
         }
     }
 
-    &__chevron {
-        display: flex;
+    .knapp--standard {
+        border-radius: 4px;
     }
 
     &__identifikator {
@@ -53,6 +53,12 @@
 
     .ekspanderbartPanel {
         width: 100%;
+
+        &__hode {
+        }
+
+        &__heading {
+        }
     }
 
     @media (min-width: 576px) {
