TAG-345: Renamet css-klassenavn og fikset posisjon avbryt-knapp

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -40,7 +40,6 @@
 
     &__avbryt {
         margin: 1rem 0;
-        width: 30%;
     }
 }
 
@@ -67,7 +66,7 @@
             margin-right: 0.5rem;
         }
 
-        &__arbeidsgiver-fnr {
+        &__arbeidsgiver-bedriftNr {
             width: 100%;
             margin-left: 0.5rem;
         }
