Flexer i Varsel-komponent, slik at lukk-knappen ikke havner foran teksten ved lang tekst.

--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -1,9 +1,10 @@
 .varsel {
-    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     &__lukknapp {
-        position: absolute;
-        top: 0.75rem;
-        right: 0.75rem;
+        margin-left: 1rem;
+        flex: none;
     }
 }
