Styling på Varsel-komponentens lukk-knapp når den dekker hele skjermen.

--- a/src/komponenter/Varsel/Varsel.less
+++ b/src/komponenter/Varsel/Varsel.less
@@ -1,10 +1,16 @@
 .varsel {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    .alertstripe__tekst {
+        max-width: inherit;
+    }
 
-    &__lukknapp {
-        margin-left: 1rem;
-        flex: none;
+    .varsel__innhold {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        &__lukknapp {
+            margin-left: 1rem;
+            flex: none;
+        }
     }
 }
