--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -79,5 +79,9 @@
         &__knapp {
             margin-top: 2rem;
         }
+        &__bedriftNavnBrreg {
+            margin-top: 0.5rem;
+            margin-left: 0.2rem;
+        }
     }
 }
