--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -13,6 +13,9 @@
     &__banner {
         margin-bottom: 1rem;
     }
+    a.lenke {
+        text-decoration: none;
+    }
 }
 
 @media (min-width: @screen-sm-min) {
@@ -26,6 +29,10 @@
         &__innhold {
             width: 40rem;
             margin-left: 1rem;
+        }
+        &__lenkedeling {
+            margin-left: 30rem;
+            margin-bottom: 0.5rem;
         }
     }
 }
