--- a/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
+++ b/src/AvtaleSide/Stegmeny/StegmenyLenke/StegmenyLenke.less
@@ -11,6 +11,7 @@
   border-radius: 4px;
   background-color: white;
   color: black;
+  font-size: 1.15rem;
   font-weight: bold;
   text-decoration: none;
 
