TAG-345 Styling på opprett-siden.

--- a/src/OpprettAvtale/OpprettAvtale.less
+++ b/src/OpprettAvtale/OpprettAvtale.less
@@ -23,11 +23,15 @@
         margin-bottom: 1rem;
     }
 
+    &__knappRad {
+        margin-top: 4rem;
+    }
+
     &__knapp {
         width: 14rem;
-        margin-top: 1rem;
         align-self: center;
     }
+
     &__arbeidsgiver-bedriftNavn {
         margin-bottom: 1rem;
     }
@@ -56,6 +60,7 @@
             display: flex;
             flex-direction: row;
         }
+
         &__input-wrapper-rad2 {
             display: flex;
             justify-content: flex-end;
@@ -76,9 +81,6 @@
             margin-bottom: 1rem;
         }
 
-        &__knapp {
-            margin-top: 2rem;
-        }
         &__bedriftNavnBrreg {
             margin-top: 0.5rem;
             margin-left: 0.2rem;
