Adding status to Avtaleoversikt

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -55,6 +55,9 @@
         &__opprettet {
             width: 7rem;
         }
+        &__status {
+            width: 7rem;
+        }
     }
     @media (min-width: @screen-sm-min) {
         margin: 0 auto;
