klarer ikke å navigere innen button enda

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -4,6 +4,11 @@
   position: sticky;
   top: 0;
 
+  &__lenke {
+    width: 100%;
+    margin-bottom: 1rem;
+    word-break: break-all;
+  }
   @media print {
     display: none;
   }
