nesteForrige knapper funker, bør plasseres bedre

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -9,6 +9,10 @@
     margin-bottom: 1rem;
     word-break: break-all;
   }
+  &__buttontoright{
+    margin-bottom: 1rem;
+    white-space: unset;
+  }
   @media print {
     display: none;
   }
