knapper funker og neste til høyre

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -11,7 +11,11 @@
   }
   &__buttontoright{
     margin-bottom: 1rem;
+    margin-inside: 1rem;
     white-space: unset;
+    /*align-items: stretch;*/
+    margin-left: 1rem;
+    float: right;
   }
   @media print {
     display: none;
