--- a/src/komponenter/EkspanderbartPanelRad/EksbanderbartPanelRad.less
+++ b/src/komponenter/EkspanderbartPanelRad/EksbanderbartPanelRad.less
@@ -30,10 +30,13 @@
     .howto {
         &__element {
             display: flex;
-            margin-bottom: 2.5rem;
-            margin-left: 1rem;
-            margin-right: 1rem;
-            margin-top: 1rem;
+            margin-bottom: 0.5rem;
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+            margin-top: 0.5rem;
+        }
+        &__hideElement {
+            display: none;
         }
         &__tekst {
             margin-left: 1rem;
