--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -11,6 +11,7 @@
 
     &__tilbake {
         margin-right: 1rem;
+
         a {
             text-decoration: none;
         }
@@ -57,5 +58,8 @@
 
     @media (min-width: 576px) {
         justify-content: space-between;
+    }
+    &__hideelement {
+        display: none;
     }
 }
