TAG-522: Flytter statusikon til egen komponent. Justerer styling.

--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -35,6 +35,9 @@
 
         &__lenkedeling {
             margin-bottom: 0.5rem;
+            svg {
+                display: inline-block;
+            }
         }
 
         &__container {
