--- a/src/komponenter/SmaaIkon/SmaaIkon.less
+++ b/src/komponenter/SmaaIkon/SmaaIkon.less
@@ -1,27 +1,27 @@
-@import '~nav-frontend-core/less/_variabler';
-
-.howto {
-    &__icon {
-        flex-grow: 1;
-    }
-
-    &__smaaikon {
-        margin-bottom: 0rem !important;
-        margin-left: 0rem;
-        margin-right: 0rem;
-        margin-top: 0rem;
-        flex-grow: 1;
-    }
-}
-
-@media (min-width: @screen-sm-min) {
-    .howto {
-        &__smaaikon {
-            margin-bottom: 0rem !important;
-            margin-left: 0rem;
-            margin-right: 0rem;
-            margin-top: 0rem;
-            flex-grow: 1;
-        }
-    }
-}
+//@import '~nav-frontend-core/less/_variabler';
+//
+//.howto {
+//    &__icon {
+//        flex-grow: 1;
+//    }
+//
+//    &__smaaikon {
+//        margin-bottom: 0rem !important;
+//        margin-left: 0rem;
+//        margin-right: 0rem;
+//        margin-top: 0rem;
+//        flex-grow: 1;
+//    }
+//}
+//
+//@media (min-width: @screen-sm-min) {
+//    .howto {
+//        &__smaaikon {
+//            margin-bottom: 0rem !important;
+//            margin-left: 0rem;
+//            margin-right: 0rem;
+//            margin-top: 0rem;
+//            flex-grow: 1;
+//        }
+//    }
+//}
