--- a/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
+++ b/src/OpprettAvtale/OpprettelseFullfort/OpprettelseFullfort.less
@@ -1,106 +1,107 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .opprettelseFullfort {
-  padding: 2rem 1rem;
-  display: flex;
-  flex-direction: column;
-
-  &__innholdstittel {
-    margin: 1rem 0 2rem 0;
-  }
-
-  &__undertittel {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
-
-  &__knapp {
-    margin-top: 2.5rem;
-    margin-bottom: 1.5rem;
-    width: 14rem;
-    align-self: center;
-  }
-
-  &__sidetittel {
-    &-wrapper {
-      display: flex;
-      flex-direction: column;
-      margin: 2rem 0;
-    }
-
-    &-ikon {
-      margin-bottom: 1rem;
-    }
-  }
-
-  &__lenke {
-    width: 100%;
-    margin-bottom: 1rem;
-    word-break: break-all;
-  }
-
-  &__lenkedeling {
+    padding: 2rem 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-  }
 
-  .nav-veilederpanel {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
-    padding-bottom: 2.5rem;
-    margin-bottom: 1rem;
-    border-color: @navBlaLighten60;
-
-    .nav-veileder__frame img, .nav-veileder__frame svg {
-      height: 100%;
+    &__innholdstittel {
+        margin: 1rem 0 2rem 0;
     }
 
-    p {
-      margin-top: 1rem;
+    &__undertittel {
+        margin-top: 2rem;
+        margin-bottom: 2rem;
     }
-  }
 
-  .lenke {
-    align-self: center;
-  }
-
-  p {
-    margin-top: 1rem;
-  }
-}
-
-@media (min-width: @screen-sm-min) {
-  .opprettelseFullfort {
-    margin: 0 auto;
-    max-width: @screen-sm-min;
+    &__knapp {
+        margin-top: 2.5rem;
+        margin-bottom: 1.5rem;
+        width: 14rem;
+        align-self: center;
+    }
 
     &__sidetittel {
-      &-wrapper {
-        flex-direction: row;
-      }
+        &-wrapper {
+            display: flex;
+            flex-direction: column;
+            margin: 2rem 0;
+        }
 
-      &-ikon {
-        margin-right: 1rem;
-        margin-bottom: 0;
-      }
+        &-ikon {
+            margin-bottom: 1rem;
+        }
     }
 
     &__lenke {
-      margin-bottom: 0.7rem;
-        margin-right: 1rem;
-        font-size: 1.2rem;
+        width: 100%;
+        margin-bottom: 1rem;
+        word-break: break-all;
     }
 
     &__lenkedeling {
-      flex-direction: row;
-      align-items: flex-end;
-      justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .nav-veilederpanel {
-      padding-left: 2rem;
-      padding-right: 2rem;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        padding-bottom: 2.5rem;
+        margin-bottom: 1rem;
+        border-color: @navBlaLighten60;
+
+        .nav-veileder__frame img,
+        .nav-veileder__frame svg {
+            height: 100%;
+        }
+
+        p {
+            margin-top: 1rem;
+        }
     }
-  }
+
+    .lenke {
+        align-self: center;
+    }
+
+    p {
+        margin-top: 1rem;
+    }
+}
+
+@media (min-width: @screen-sm-min) {
+    .opprettelseFullfort {
+        margin: 0 auto;
+        max-width: @screen-sm-min;
+
+        &__sidetittel {
+            &-wrapper {
+                flex-direction: row;
+            }
+
+            &-ikon {
+                margin-right: 1rem;
+                margin-bottom: 0;
+            }
+        }
+
+        &__lenke {
+            margin-bottom: 0.7rem;
+            margin-right: 1rem;
+            font-size: 1.2rem;
+        }
+
+        &__lenkedeling {
+            flex-direction: row;
+            align-items: flex-end;
+            justify-content: space-between;
+        }
+
+        .nav-veilederpanel {
+            padding-left: 2rem;
+            padding-right: 2rem;
+        }
+    }
 }
