--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -29,10 +29,6 @@
 
     &__lenker {
         &__header {
-            display: flex;
-            justify-content: flex-start;
-            flex-wrap: nowrap;
-            width: 95%;
             padding: 1rem;
             font-weight: bold;
         }
@@ -40,22 +36,34 @@
         &__rad {
             display: flex;
             justify-content: flex-start;
+            align-items: center;
             flex-wrap: nowrap;
             width: 95%;
         }
 
         &__deltaker {
-            width: 17rem;
+            width: 11rem;
+            padding-right: 1rem;
         }
 
         &__bedrift {
-            width: 17rem;
+            width: 11rem;
+            padding-right: 1rem;
         }
 
         &__opprettet {
-            width: 7rem;
+            width: 8rem;
+        }
+
+        &__status {
+            width: 11rem;
+        }
+
+        &__statusikon {
+            width: 2rem;
         }
     }
+
     @media (min-width: @screen-sm-min) {
         margin: 0 auto;
         max-width: @screen-sm-min;
