bruk stegIfo array[], switched to justify-content, slett ubrukt klasser og linjer

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -1,7 +1,7 @@
 .nesteforrige {
     display: flex;
     flex-direction: column;
-
+    top: 0;
     &__rowspacebetween {
         display: flex;
         justify-content: space-between;
