bruk margin for neste knapp blir til høyre

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -1,11 +1,8 @@
 .nesteforrige {
     display: flex;
-    flex-direction: row;
     top: 0;
-    justify-content: space-between;
-    &__nestealene {
-        display: flex;
-        justify-content: flex-end;
+    &__nesteknapp {
+        margin-left: auto;
     }
     @media print {
         display: none;
