--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -7,19 +7,13 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     &__flexendloggutknapp {
         display: flex;
         justify-content: flex-end;
     }
-    &__tilbake.innloggingslinje {
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-        justify-content: space-between !important;
-
+    &__tilbake {
         margin-right: 1rem;
-
         a {
             text-decoration: none;
         }
@@ -65,9 +59,6 @@
     }
 
     @media (min-width: 576px) {
-        // justify-content: space-between;
-    }
-    &__hideelement {
-        display: none;
+        justify-content: space-evenly;
     }
 }
