endrer space mellom status og status ikon

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -56,11 +56,11 @@
         }
 
         &__status {
-            width: 11rem;
+
         }
 
         &__statusikon {
-            width: 4rem;
+            padding-left: 1rem;
         }
     }
 
