gjør status ikon flexplassert etter tekstlang

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -56,11 +56,10 @@
         }
 
         &__status {
-            width: 11rem;
         }
 
         &__statusikon {
-            width: 2rem;
+            padding-left: 1rem;
         }
     }
 
