optimize import og add padding til knapper

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -3,6 +3,10 @@
     &__nesteknapp {
         margin-left: auto;
     }
+    &__mypadding {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
     &__chevron {
         display: inline-block;
         align-items: center;
