neste-forrige-knapper-med-chevron-uten-unødvendig-div

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -3,7 +3,7 @@
     &__nesteknapp {
         margin-left: auto;
     }
-    &__mypadding {
+    &__hoyrevnstrepadding {
         padding-left: 1rem;
         padding-right: 1rem;
     }
