--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -35,9 +35,16 @@
 
         &__lenkedeling {
             margin-bottom: 0.5rem;
+
             svg {
                 display: inline-block;
+                margin-right: 0.5rem;
             }
+        }
+
+        &__lenkedelingLenke {
+            display: flex;
+            align-items: center;
         }
 
         &__container {
