TAG-58 Godkjenne pa vegne av deltaker komponent etc

--- a/src/AvtaleSide/GodkjenningSteg/Godkjenning.less
+++ b/src/AvtaleSide/GodkjenningSteg/Godkjenning.less
@@ -21,6 +21,10 @@
         margin: 2rem 0;
     }
 
+    &__lagreKnapp {
+        width: 100%;
+    }
+
     @media print {
         display: none;
     }
