La til mer luft på kontaktinformasjon om arbeidsgiver

--- a/src/AvtaleSide/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
+++ b/src/AvtaleSide/KontaktInformasjonSteg/ArbeidsgiverinfoDel/ArbeidsgiverinfoDel.less
@@ -33,6 +33,7 @@
     .arbeidsgiverbedriftrad {
         display: flex;
         flex-direction: row;
+        margin-bottom: 2rem;
 
         &__fornavn {
             width: 50%;
