--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -20,23 +20,47 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-top: 4rem;
+        padding-top: 0.5rem;
 
         &__desktop {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
         }
 
         &__innhold {
             width: 40rem;
             margin-left: 1rem;
         }
-
+        &__lenkerlinje {
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+        }
         &__lenkedeling {
             margin-bottom: 0.5rem;
             svg {
                 display: inline-block;
+            }
+        }
+        &__tilbake {
+            a {
+                text-decoration: underline;
+            }
+        }
+        &__tilbakelenke {
+            &--tilbake {
+                display: flex;
+                align-items: center;
+            }
+
+            &--tilbake .chevronboks {
+                padding-right: 0.25rem;
+            }
+
+            &:hover {
+                .nav-frontend-chevron {
+                    right: 6px;
+                }
             }
         }
 
