--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -7,7 +7,8 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
+
     &__chevron {
         display: flex;
     }
@@ -26,7 +27,8 @@
         display: flex;
         align-items: center;
     }
-
+    &__innhold {
+    }
     @media print {
         display: none;
     }
@@ -36,6 +38,10 @@
     }
 
     @media (min-width: 576px) {
-        justify-content: space-around;
+        justify-content: space-between;
+    }
+    @media (min-width: @screen-sm-min) {
+        margin: 0 auto;
+        width: 59rem;
     }
 }
