--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -8,7 +8,9 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-
+    &__oversiktsiden {
+        width: auto !important;
+    }
     &__chevron {
         display: flex;
     }
