TAG-539-Gjør Tilbake til Oversikt til lenk og flytte til avtaleside,Innloggings linje design er midlertidig (#118)
* gjør Tilbake til Oversikt til lenk og flytte til avtaleside,Innloggingslinje design er midlertidig

* Gjør tilbakeLenk i MobilAvtaleSide, la mer luft i avtaleside, og endre innloggingslinje til allign med resten av siden

* tilpasse innlogginglinje width til avtaleside width

* bytter Normaltext til EtikkettLiteni innlogginglinje

* fikse bredde til Innloggingslinje innen oversikt siden

--- a/src/InnloggingBoundary/Innloggingslinje.less
+++ b/src/InnloggingBoundary/Innloggingslinje.less
@@ -8,14 +8,9 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-
-    &__tilbake {
-        margin-right: 1rem;
-        a {
-            text-decoration: none;
-        }
+    &__oversiktsiden {
+        width: auto !important;
     }
-
     &__chevron {
         display: flex;
     }
@@ -25,28 +20,16 @@
         text-decoration: none;
     }
 
-    &__tilbakeknapp {
-        &--tilbake {
-            display: flex;
-            align-items: center;
-        }
-
-        &--tilbake .chevronboks {
-            padding-right: 0.25rem;
-        }
-
-        &:hover {
-            .nav-frontend-chevron {
-                right: 6px;
-            }
-        }
-    }
-
     &__identitet {
-        padding-right: 4rem;
+        padding-right: 1rem;
         color: black;
     }
-
+    &__identitetogloggut {
+        display: flex;
+        align-items: center;
+    }
+    &__innhold {
+    }
     @media print {
         display: none;
     }
@@ -57,5 +40,9 @@
 
     @media (min-width: 576px) {
         justify-content: space-between;
+    }
+    @media (min-width: @screen-sm-min) {
+        margin: 0 auto;
+        width: 59rem;
     }
 }
