--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -13,6 +13,36 @@
     &__banner {
         margin-bottom: 1rem;
     }
+
+    &__lenkerlinje {
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
+    }
+
+    &__tilbake {
+        a {
+            text-decoration: underline;
+        }
+    }
+    &__tilbakelenke {
+        &--tilbake {
+            display: flex;
+            align-items: center;
+        }
+
+        &--tilbake .chevronboks {
+            padding-right: 0.25rem;
+        }
+
+        &:hover {
+            .nav-frontend-chevron {
+                right: 6px;
+            }
+        }
+    }
 }
 
 @media (min-width: @screen-sm-min) {
@@ -20,12 +50,11 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-top: 4rem;
+        padding-top: 0.5rem;
 
         &__desktop {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
         }
 
         &__innhold {
