--- a/src/AvtaleSide/ArbeidstidSteg/Datovelger/datovelger.less
+++ b/src/AvtaleSide/ArbeidstidSteg/Datovelger/datovelger.less
@@ -219,6 +219,7 @@
         color: @redError;
         margin-top: 0.5rem;
         margin-bottom: 0;
+        width: max-content;
     }
 
     &__inner {
