--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -18,30 +18,16 @@
         align-items: center;
         display: flex;
         justify-content: space-between;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
     }
 
-    &__tilbake {
-        a {
-            text-decoration: underline;
-        }
+    .tilbaketiloversikt {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
-    &__tilbakelenke {
-        &--tilbake {
-            display: flex;
-            align-items: center;
-        }
 
-        &--tilbake .chevronboks {
-            padding-right: 0.25rem;
-        }
-
-        &:hover {
-            .nav-frontend-chevron {
-                right: 6px;
-            }
-        }
+    .lenkedeling {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 }
 
@@ -50,7 +36,7 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-top: 0.5rem;
+        padding-top: 0;
 
         &__desktop {
             display: flex;
@@ -62,24 +48,11 @@
             margin-left: 1rem;
         }
 
-        &__lenkedeling {
-            margin-bottom: 0.5rem;
-            svg {
-                display: inline-block;
-            }
-        }
-
         &__container {
             display: flex;
             flex-direction: row;
             justify-content: center;
             align-items: flex-start;
         }
-    }
-}
-
-@media print {
-    .avtaleside__lenkedeling {
-        display: none;
     }
 }
