--- a/src/AvtaleSide/AvtaleSide.less
+++ b/src/AvtaleSide/AvtaleSide.less
@@ -3,7 +3,8 @@
 .avtaleside {
     min-height: 100%;
     background-color: @grayBackground;
-    padding: 1rem 1rem 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
 
     &__ekspanderbart-panel {
         margin-top: 0.5rem;
@@ -36,7 +37,6 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        padding-top: 0;
 
         &__desktop {
             display: flex;
