Nytt felt med deltakers telefonnummer

--- a/src/AvtaleSide/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
+++ b/src/AvtaleSide/KontaktInformasjonSteg/DeltakerinfoDel/DeltakerinfoDel.less
@@ -30,5 +30,10 @@
                 width: 50%;
             }
         }
+
+        &__telefonnummer {
+            width: 50%;
+            padding-right: 1rem;
+        }
     }
 }
