Endret til lenke fra knapp for forrige/neste-funksjonaliteten

--- a/src/AvtaleSide/NesteForrige/NesteForrige.less
+++ b/src/AvtaleSide/NesteForrige/NesteForrige.less
@@ -1,15 +1,15 @@
 .nesteforrige {
     display: flex;
+    margin-top: 0.4rem;
+    margin-bottom: 1rem;
     &__nesteknapp {
         margin-left: auto;
     }
-    &__hoyrevnstrepadding {
-        padding-left: 1rem;
-        padding-right: 1rem;
-    }
+    
     &__chevron {
         display: inline-block;
         align-items: center;
+        
         &--forrige .chevronboks {
             padding-right: 0.25rem;
             margin-right: 0.5rem;
