--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -1,6 +1,7 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .avtaleoversikt {
+    min-height: 35rem;
     display: flex;
     flex-direction: column;
 
