Lagt til avrundede kanter på utfyller-banner og endret til lysere farge på NAV-banner

--- a/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
+++ b/src/komponenter/Innholdsboks/UfyllerBanner/UtfyllerBanner.less
@@ -4,13 +4,14 @@
     display: flex;
     align-items: center;
     height: 2.5rem;
+    border-radius: 4px 4px 0 0;
 
     &__arbeidsgiver {
         background-color: @navBlaLighten80;
     }
 
     &__veileder {
-        background-color: @navLillaLighten60;
+        background-color: @navLillaLighten80;
     }
 
     &__begge {
