Endret utseende på utregningsboks og lagt til kalkulator-ikon

--- a/src/AvtaleSide/ArbeidstidSteg/InfoBoks/InfoBoks.less
+++ b/src/AvtaleSide/ArbeidstidSteg/InfoBoks/InfoBoks.less
@@ -1,15 +1,21 @@
 @import '~nav-frontend-core/less/_variabler';
 
 .infoboks {
-    background-color: @navLysBlaLighten60;
-    padding: 1rem 1rem 1.5rem;
+    border: 3px solid @navBlaLighten80;
+    border-radius: 4px;
+    padding: 1.5rem 1.5rem 1.5rem;
     margin-bottom: 1rem;
+    display: flex;
 
     &__dette-tilsvarer {
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
     }
 
     &__bold {
         font-weight: bold;
+    }
+
+    &__tekst {
+        margin-left: 1.5rem;
     }
 }
