Lagt svg i egen fil og fikset mindre tilbakemeldinger fra PR

--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -1,6 +1,6 @@
 @import '../../node_modules/nav-frontend-core/less/_variabler';
 
-.landing {
+.innloggingsside {
     align-items: center;
     flex-direction: column;
     display: flex;
