--- a/src/Informajonsside/informasjonsside.less
+++ b/src/Informajonsside/informasjonsside.less
@@ -6,13 +6,20 @@
         width: 740px;
     }
 
+    &__eksterntLenkeikon {
+        display: inline-block;
+        margin-left: 0.2rem;
+    }
+
     .tilbaketiloversikt {
-        padding: 1.5rem 0;
+        margin: 4rem 0 1rem 0;
     }
 
     &__innhold {
         background-color: white;
         padding: 2rem;
+        margin-bottom: 4rem;
+        border-radius: 4px;
     }
 
     .ClipBoardIkon {
