--- a/src/Informajonsside/informasjonsside.less
+++ b/src/Informajonsside/informasjonsside.less
@@ -17,7 +17,7 @@
 
     &__innhold {
         background-color: white;
-        padding: 1rem 1rem 1rem 2rem;
+        padding: 1rem 1rem 1rem 1.5rem;
         border-radius: 4px;
     }
 
@@ -30,17 +30,18 @@
     }
 
     &__innholdstittel {
-        padding-top: 1rem;
+        padding-top: 0.5rem;
         display: flex;
         justify-content: left;
     }
 
     &__ingress {
         padding: 1rem 0 2rem 0rem;
+        border-bottom: 1px solid #C6C2BF
     }
 
     &__info {
-        margin: 1rem 0rem 3rem -1rem;
+        margin: 2rem 0rem 2rem -1rem;
     }
 
     //  Spesielt for browser:
@@ -50,7 +51,8 @@
         }
 
         &__ingress {
-            padding: 1rem 1rem 2rem 1rem;
+            padding: 1rem 1rem 3rem 1rem;
+            border-bottom: none;
         }
 
         &__ClipboardIkon {
