Redesignet landingssiden noe - enklere og mer innbydende

--- a/src/InnloggingBoundary/Innloggingsside.less
+++ b/src/InnloggingBoundary/Innloggingsside.less
@@ -18,7 +18,25 @@
 
     &__infotekst {
         margin-bottom: 2rem;
-        max-width: 80%;
+        max-width: 40rem;
+        margin: 0rem 2rem 0rem 2rem;
+    }
+
+    &__koffertikon {
+        margin-top: 4rem;
+    }
+}
+
+.wrapper {
+    min-height: 100vh;
+    background: white;
+}
+
+@media (min-width: 765px) {
+    &__infotekst {
+        margin-bottom: 2rem;
+        max-width: 40rem;
         margin: 0rem 3rem 0rem 3rem;
     }
+
 }
