commitet prettier formatering i stylingen til Informasjonsside.tsx

--- a/src/Informajonsside/informasjonsside.less
+++ b/src/Informajonsside/informasjonsside.less
@@ -37,7 +37,7 @@
 
     &__ingress {
         padding: 1rem 0 2rem 0rem;
-        border-bottom: 1px solid #C6C2BF
+        border-bottom: 1px solid #c6c2bf;
     }
 
     &__info {
