Lagt til illustrasjon i empty-state, men feiler.

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -4,9 +4,16 @@
     display: flex;
     flex-direction: column;
 
+    &__banner {
+        width: 100%;
+    }
+
+    // &__natur {
+    //     width: 30%;
+    // }
+
     &__ingen_avtaler {
         text-align: center;
-        font-style: italic;
     }
 
     &__topp {
