fikset feil med importerting av svg i liste oversikt

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -8,9 +8,16 @@
         width: 100%;
     }
 
-    // &__natur {
-    //     width: 30%;
-    // }
+    &__natur-logo {
+        margin: 4.5rem 0 1.5rem 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+
+        .avtaleoversikt__natur-tekst {
+            margin-top: 1.5rem;
+        }
+    }
 
     &__ingen_avtaler {
         text-align: center;
