Tag 698 informasjonsside til bruker (#138)
* opprettet ny informasjonsside til appen, og lagt inn første info punkt med ikon

* lagt til headerTekst på første info boks

* in progress

* fikset inputfelt for headertekst, slik at den kan velge typografiType hvis Onsket

* Opprettet informasjonsside, og justert innhold mtp. mobil

* lagt til Router path i App.tsx, lagt til alertstrip i avtaleoversikt, og lenke i innloggingssiden, mm styling fikset

* fikset routing bugg i app.tsx :D

* fikset differanse på uinnlogget og innlogget informasjonsside, slik at innloggingslinjen kommer med i innlogget tilstand

* Finjustert mobilversjon

* fjernet utkommentert stlying i AvtaleOversikt.less

* commitet prettier formatering i stylingen til Informasjonsside.tsx

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -1,8 +1,11 @@
 @import '~nav-frontend-core/less/_variabler';
-
 .avtaleoversikt {
     display: flex;
     flex-direction: column;
+
+    .alertstripe .alertstripe__tekst {
+        max-width: 800px;
+    }
 
     &__ingen_avtaler {
         text-align: center;
@@ -21,6 +24,10 @@
         &__knapp {
             margin-top: 2rem;
         }
+    }
+
+    &__informasjonsBanner {
+        margin: 2rem 0;
     }
 
     &__lenker {
