fikset skallering paa svg bilde til mobile versjon

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -17,6 +17,9 @@
         .avtaleoversikt__natur-tekst {
             margin-top: 1.5rem;
         }
+
+        .avtaleoversikt__test {
+        }
     }
 
     &__ingen_avtaler {
