Lagt til forskjellige tilbakemeldinger (NAV vs. AG/Deltaker) på ingenAvtaler-state

--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -24,16 +24,19 @@
     }
 
     &__topp {
-        text-align: center;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-
-        &__tittel {
-            margin-bottom: 1rem;
+        margin: 2rem 0 3rem 0;
+        
+        &__knapp_med_avtaler {
+            display: flex;
+            justify-content: center;
+            margin-top: 3rem;
+            margin-bottom: 3rem;
         }
 
-        &__knapp {
-            margin-top: 2rem;
+        &__knapp_uten_avtaler {
+            display: flex;
+            justify-content: center;
+            margin-top: 4rem;
         }
     }
 
