--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -9,13 +9,19 @@
     }
 
     &__natur-logo {
-        margin: 4.5rem 0 1.5rem 0;
+        margin: 2.5rem 0 1.5rem 0;
         display: flex;
         align-items: center;
         flex-direction: column;
 
+        .avtaleoversikt__natur-header {
+            margin-top: 1rem;
+        }
+
         .avtaleoversikt__natur-tekst {
-            margin-top: 2rem;
+            text-align: center;
+            margin-top: 1rem;
+            width: 90%;
         }
     }
 
@@ -82,13 +88,18 @@
         max-width: @screen-sm-min;
 
         &__natur-logo {
-            margin: 4.5rem 0 1.5rem 0;
+            margin: 2.5rem 0 1.5rem 0;
             display: flex;
             align-items: center;
             flex-direction: column;
 
+            .avtaleoversikt__natur-header {
+                margin-top: 3rem;
+            }
+    
             .avtaleoversikt__natur-tekst {
-                margin-top: 2rem;
+                margin-top: 1rem;
+                text-align: center;
             }
         }
     }
