--- a/src/AvtaleSide/AvtaleOversikt.less
+++ b/src/AvtaleSide/AvtaleOversikt.less
@@ -50,7 +50,7 @@
     }
 
     &__informasjonsBanner {
-        margin: 2rem 0;
+        margin: 0 0.5rem 0 0.5rem;
         justify-content: center;
     }
 
@@ -100,7 +100,6 @@
         }
 
         &__informasjonsBanner {
-            margin: 2rem 0;
             justify-content: center;
         }
 
